First implementation of tests for sweCsaRaoResultValidator